--- a/MB Studio/Properties/Settings.settings
+++ b/MB Studio/Properties/Settings.settings
@@ -49,5 +49,8 @@
     <Setting Name="projectsFolderPath" Type="System.String" Scope="User">
       <Value Profile="(Default)">.\Projects\</Value>
     </Setting>
+    <Setting Name="languageIndex" Type="System.Byte" Scope="User">
+      <Value Profile="(Default)">1</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
