--- a/MB_Decompiler/MB_Decompiler.csproj
+++ b/MB_Decompiler/MB_Decompiler.csproj
@@ -104,6 +104,9 @@
     <ErrorReport>prompt</ErrorReport>
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject>MB_Decompiler.ProgramConsole</StartupObject>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="importantLib, Version=1.3.2.1, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
