--- a/openBrf/openBrf.rc
+++ b/openBrf/openBrf.rc
@@ -17,13 +17,13 @@ BEGIN
         BLOCK "040904b0"
         BEGIN
             VALUE "Comments", "Opens Binary Resource files\0"
-            VALUE "CompanyName", "Marco Tarini.\0"
-            VALUE "FileDescription", "OpenBRF\0"
+            VALUE "CompanyName", "Marco Tarini. / J.SYS\0"
+            VALUE "FileDescription", "OpenBRF (Lib)\0"
             VALUE "FileVersion", "1, 0, 0, 1\0"
             VALUE "InternalName", "MyProject\0"
-            VALUE "LegalCopyright", "Copyright (C) 2010\0"
+            VALUE "LegalCopyright", "Copyright (C) 2010 (2016 - 2018)\0"
             VALUE "OriginalFilename", "OpenBbr.exe\0"
-            VALUE "ProductName", "OpenBRF\0"
+            VALUE "ProductName", "OpenBRF (Lib)\0"
             VALUE "ProductVersion", "1, 0, 0, 1\0"
         END
     END
