--- a/brfManager/brfManager.csproj
+++ b/brfManager/brfManager.csproj
@@ -67,10 +67,6 @@
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="importantLib, Version=1.7.1.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\importantLib\importantLib\bin\Release\importantLib.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
@@ -80,6 +76,12 @@
   <ItemGroup>
     <Compile Include="OpenBrfManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\importantLib\importantLib\importantLib.csproj">
+      <Project>{DCFF1576-1736-4BFD-9A3E-901246B7E8C9}</Project>
+      <Name>importantLib</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
