Test wieder hinzugefügt + Added Option show3DView

--- a/MB Studio/App.config
+++ b/MB Studio/App.config
@@ -68,6 +68,9 @@
             <setting name="languageIndex" serializeAs="String">
                 <value>1</value>
             </setting>
+            <setting name="show3DView" serializeAs="String">
+                <value>True</value>
+            </setting>
         </MB_Studio.Properties.Settings>
     </userSettings>
 </configuration>
