--- a/MB Studio/Properties/Settings.settings
+++ b/MB Studio/Properties/Settings.settings
@@ -52,5 +52,8 @@
     <Setting Name="languageIndex" Type="System.Byte" Scope="User">
       <Value Profile="(Default)">1</Value>
     </Setting>
+    <Setting Name="show3DView" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
