Added Option loadSavedObjects + GUI Anpassungen + bugfix + postbuildevents changed

--- a/MB Studio/App.config
+++ b/MB Studio/App.config
@@ -71,6 +71,9 @@
             <setting name="show3DView" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="loadSavedObjects" serializeAs="String">
+                <value>True</value>
+            </setting>
         </MB_Studio.Properties.Settings>
     </userSettings>
 </configuration>
