--- a/MB Studio/Properties/Settings.settings
+++ b/MB Studio/Properties/Settings.settings
@@ -55,5 +55,8 @@
     <Setting Name="show3DView" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
+    <Setting Name="loadSavedObjects" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
