--- a/MB Studio/MB Studio.csproj
+++ b/MB Studio/MB Studio.csproj
@@ -359,6 +359,7 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
+    <None Include="PostBuildEvents.bat" />
     <None Include="platforms\qwindows.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
@@ -707,39 +708,47 @@
     </PreBuildEvent>
   </PropertyGroup>
   <PropertyGroup>
-    <PostBuildEvent>if "$(ConfigurationName)" == "Debug" goto :debug
-:release
-if "$(PlatformName)" == "x64" goto :release_x64
-:release_x86
-copy "F:\Qt\5.10.1\msvc2015\bin\Qt5OpenGL.dll" "$(TargetDir)"
-copy "F:\Qt\5.10.1\msvc2015\bin\Qt5Widgets.dll" "$(TargetDir)"
-copy "F:\Qt\5.10.1\msvc2015\bin\Qt5Gui.dll" "$(TargetDir)"
-copy "F:\Qt\5.10.1\msvc2015\bin\Qt5Xml.dll" "$(TargetDir)"
-copy "F:\Qt\5.10.1\msvc2015\bin\Qt5Core.dll" "$(TargetDir)"
-goto :exit
-:release_x64
-copy "F:\Qt\5.10.1\msvc2015_64\bin\Qt5OpenGL.dll" "$(TargetDir)"
-copy "F:\Qt\5.10.1\msvc2015_64\bin\Qt5Widgets.dll" "$(TargetDir)"
-copy "F:\Qt\5.10.1\msvc2015_64\bin\Qt5Gui.dll" "$(TargetDir)"
-copy "F:\Qt\5.10.1\msvc2015_64\bin\Qt5Xml.dll" "$(TargetDir)"
-copy "F:\Qt\5.10.1\msvc2015_64\bin\Qt5Core.dll" "$(TargetDir)"
-goto :exit
-:debug
-if "$(PlatformName)" == "x64" goto :debug_x64
-:debug_x86
-copy "F:\Qt\5.10.1\msvc2015\bin\Qt5OpenGLd.dll" "$(TargetDir)"
-copy "F:\Qt\5.10.1\msvc2015\bin\Qt5Widgetsd.dll" "$(TargetDir)"
-copy "F:\Qt\5.10.1\msvc2015\bin\Qt5Guid.dll" "$(TargetDir)"
-copy "F:\Qt\5.10.1\msvc2015\bin\Qt5Xmld.dll" "$(TargetDir)"
-copy "F:\Qt\5.10.1\msvc2015\bin\Qt5Cored.dll" "$(TargetDir)"
-goto  :exit
-:debug_x64
-copy "F:\Qt\5.10.1\msvc2015_64\bin\Qt5OpenGLd.dll" "$(TargetDir)"
-copy "F:\Qt\5.10.1\msvc2015_64\bin\Qt5Widgetsd.dll" "$(TargetDir)"
-copy "F:\Qt\5.10.1\msvc2015_64\bin\Qt5Guid.dll" "$(TargetDir)"
-copy "F:\Qt\5.10.1\msvc2015_64\bin\Qt5Xmld.dll" "$(TargetDir)"
-copy "F:\Qt\5.10.1\msvc2015_64\bin\Qt5Cored.dll" "$(TargetDir)"
-:exit
-copy "$(SolutionDir)\openBrf\$(PlatformName)\$(ConfigurationName)\openBrf.dll" "$(TargetDir)"</PostBuildEvent>
+    <PostBuildEvent>IF "$(ConfigurationName)" == "Debug" goto :Debug
+
+:Release
+IF "$(PlatformName)" == "x64" goto :Release_x64
+
+:Release_x86
+IF NOT EXIST "$(TargetDir)\Qt5OpenGL.dll" COPY "F:\Qt\5.10.1\msvc2015\bin\Qt5OpenGL.dll" "$(TargetDir)"
+IF NOT EXIST "$(TargetDir)\Qt5Widgets.dll" COPY "F:\Qt\5.10.1\msvc2015\bin\Qt5Widgets.dll" "$(TargetDir)"
+IF NOT EXIST "$(TargetDir)\Qt5Gui.dll" COPY "F:\Qt\5.10.1\msvc2015\bin\Qt5Gui.dll" "$(TargetDir)"
+IF NOT EXIST "$(TargetDir)\Qt5Xml.dll" COPY "F:\Qt\5.10.1\msvc2015\bin\Qt5Xml.dll" "$(TargetDir)"
+IF NOT EXIST "$(TargetDir)\Qt5Core.dll" COPY "F:\Qt\5.10.1\msvc2015\bin\Qt5Core.dll" "$(TargetDir)"
+goto :AllAndExit
+
+:Release_x64
+IF NOT EXIST "$(TargetDir)\Qt5OpenGL.dll" COPY "F:\Qt\5.10.1\msvc2015_64\bin\Qt5OpenGL.dll" "$(TargetDir)"
+IF NOT EXIST "$(TargetDir)\Qt5Widgets.dll" COPY "F:\Qt\5.10.1\msvc2015_64\bin\Qt5Widgets.dll" "$(TargetDir)"
+IF NOT EXIST "$(TargetDir)\Qt5Gui.dll" COPY "F:\Qt\5.10.1\msvc2015_64\bin\Qt5Gui.dll" "$(TargetDir)"
+IF NOT EXIST "$(TargetDir)\Qt5Xml.dll" COPY "F:\Qt\5.10.1\msvc2015_64\bin\Qt5Xml.dll" "$(TargetDir)"
+IF NOT EXIST "$(TargetDir)\Qt5Core.dll" COPY "F:\Qt\5.10.1\msvc2015_64\bin\Qt5Core.dll" "$(TargetDir)"
+goto :AllAndExit
+
+:Debug
+IF "$(PlatformName)" == "x64" goto :Debug_x64
+
+:Debug_x86
+IF NOT EXIST "$(TargetDir)\Qt5OpenGLd.dll" COPY "F:\Qt\5.10.1\msvc2015\bin\Qt5OpenGLd.dll" "$(TargetDir)"
+IF NOT EXIST "$(TargetDir)\Qt5Widgetsd.dll" COPY "F:\Qt\5.10.1\msvc2015\bin\Qt5Widgetsd.dll" "$(TargetDir)"
+IF NOT EXIST "$(TargetDir)\Qt5OpenGLd.dll" COPY "F:\Qt\5.10.1\msvc2015\bin\Qt5Guid.dll" "$(TargetDir)"
+IF NOT EXIST "$(TargetDir)\Qt5Guid.dll" COPY "F:\Qt\5.10.1\msvc2015\bin\Qt5Xmld.dll" "$(TargetDir)"
+IF NOT EXIST "$(TargetDir)\Qt5Cored.dll" COPY "F:\Qt\5.10.1\msvc2015\bin\Qt5Cored.dll" "$(TargetDir)"
+goto  :AllAndExit
+
+:Debug_x64
+IF NOT EXIST "$(TargetDir)\Qt5OpenGLd.dll" COPY "F:\Qt\5.10.1\msvc2015_64\bin\Qt5OpenGLd.dll" "$(TargetDir)"
+IF NOT EXIST "$(TargetDir)\Qt5Widgetsd.dll" COPY "F:\Qt\5.10.1\msvc2015_64\bin\Qt5Widgetsd.dll" "$(TargetDir)"
+IF NOT EXIST "$(TargetDir)\Qt5Guid.dll" COPY "F:\Qt\5.10.1\msvc2015_64\bin\Qt5Guid.dll" "$(TargetDir)"
+IF NOT EXIST "$(TargetDir)\Qt5Xmld.dll" COPY "F:\Qt\5.10.1\msvc2015_64\bin\Qt5Xmld.dll" "$(TargetDir)"
+IF NOT EXIST "$(TargetDir)\Qt5Cored.dll" COPY "F:\Qt\5.10.1\msvc2015_64\bin\Qt5Cored.dll" "$(TargetDir)"
+
+:AllAndExit
+COPY "$(SolutionDir)\openBrf\$(PlatformName)\$(ConfigurationName)\openBrf.dll" "$(TargetDir)"
+:Exit</PostBuildEvent>
   </PropertyGroup>
 </Project>
