--- a/MB Studio/MB Studio.csproj
+++ b/MB Studio/MB Studio.csproj
@@ -213,10 +213,10 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Main\ToolForm.cs">
+    <Compile Include="Manager\ToolForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Main\ToolForm.Designer.cs">
+    <Compile Include="Manager\ToolForm.Designer.cs">
       <DependentUpon>ToolForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Manager\Support\TriggerSelector.cs">
@@ -280,7 +280,7 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
-    <EmbeddedResource Include="Main\ToolForm.resx">
+    <EmbeddedResource Include="Manager\ToolForm.resx">
       <DependentUpon>ToolForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Manager\Support\TriggerSelector.resx">
