--- a/MB Studio/App.config
+++ b/MB Studio/App.config
@@ -74,6 +74,9 @@
             <setting name="loadSavedObjects" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="updateChannel" serializeAs="String">
+                <value>stable</value>
+            </setting>
         </MB_Studio.Properties.Settings>
     </userSettings>
 </configuration>
