AllMeshResourceNames / ModMeshResourceNames added (tests still needed) + BaseColor

--- a/MB Studio/App.config
+++ b/MB Studio/App.config
@@ -77,6 +77,9 @@
             <setting name="updateChannel" serializeAs="String">
                 <value>stable</value>
             </setting>
+            <setting name="baseColor" serializeAs="String">
+                <value>56, 56, 56</value>
+            </setting>
         </MB_Studio.Properties.Settings>
     </userSettings>
 </configuration>
